style: Fixing button size and line size(on mobile) on overflow

--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -22,6 +22,11 @@
         width: 18px;
         height: 18px;
         background-size: 7.5px 7.5px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .profile__button-edit {
         margin-right: 19px;
     }
 }
